<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NeverEatAlone</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="register_information">Register Information</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="title_activity_invites">InvitesActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_create_meal_information">CreateMealInformationActivity</string>
    <string name="CreateMealInformation_meal_information">Meal Info</string>
    <string name="when">When?</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="where">Where?</string>
    <string name="restaurant">Restaurant</string>
    <string name="other_information">Other Information</string>
    <string name="max_number">Max Number Attending</string>
    <string name="allow_friend_invite">Allow Friends to Invite Others</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="create">Create An Invite</string>
    <string name="title_activity_notification_test_ativity">NotificationTestAtivity</string>
    <string name="recipient">Recipient</string>
    <string name="post">Post</string>
    <string name="message">Message</string>
    <string name="SelectDate">Select Date</string>
    <string name="SelectTime">Select Time</string>
    <string name="capital_yes">YES</string>
    <string name="capital_no">NO</string>
    <string name="title_activity_tweet_list">TweetListActivity</string>
    <string name="title_activity_meal_detail">MealDetailActivity</string>
    <string name="title_activity_tweet_detail">TweetDetailActivity</string>
    <string name="profile">Profile</string>
    <string name="alias">Alias</string>
    <string name="name">Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="workspace">Workplace</string>
    <string name="edit">Edit Profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="title_activity_change_password">ChangepasswordActivity</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="add_friends">Add Friends</string>
    <string name="search_by_username">Search By username</string>
    <string name="search_by_email">Search By email</string>
    <string name="search">Search</string>
    <string name="deletehint">Are you sure you want to delete the following account?</string>
    <string name="title_activity_select_friends">SelectFriendsActivity</string>
    <string name="select_friends">Select Friends</string>
    <string name="broadcast_to_all_friends">Broadcast to All Friends</string>
    <string name="title_activity_post_information">PostInformationActivity</string>
    <string name="post_information">Post Information</string>
    <string name="post_time">Time for the Post</string>
    <string name="start_post">Start Post</string>
    <string name="end_post">End Post</string>
    <string name="additional_info">Additional Information</string>
    <string name="user_avatar">User Avatar</string>
    <string name="title_activity_display_contact_notification">DisplayContactNotificationActivity</string>
    <string name="contact_notification">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="empty_username">No username provided.</string>
    <string name="empty_email">No email provided.</string>
    <string name="empty_password">No password provided.</string>
    <string name="different_passwords">Passwords do not match.</string>
    <string name="contacts">Contacts</string>
    <string name="friends_request">Friend Requests</string>
    <string name="availability_status">Availability Status:</string>
    <string name="meal_details">Meal Details</string>
    <string name="app_logo">App Logo</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="location_empty">Please enter a location.</string>
    <string name="number_invitees_empty">Please enter the max number of invitees.</string>
    <string name="date_error">Please enter valid start/end date/time.</string>
    <string name="title_activity_my_posts">MyPostsActivity</string>
    <string name="unselect_all_friends">Unselect All</string>
    <string name="my_posts">My Invites</string>
    <string name="invitees_not_enough">The max number of attendance should be at least 2.</string>
    <string name="no_invitees">You must select at least 1 recipient.</string>
    <string name="more_invitees_first">You set the maximum number of attendance to be </string>
    <string name="more_invitees_last">. The current number of attendance is </string>
    <string name="title_activity_contacts_profile">ContactsProfileActivity</string>
    <string name="contacts_profile">Contacts Profile</string>
    <string name="accepted_invites">Accepted Invites</string>
    <string name="title_activity_accepted_invites">AcceptedInvitesActivity</string>
    <string name="decline">Decline</string>
    <string name="with_whom">With Whom?</string>
    <string name="additional_information">Additional Information</string>
    <string name="invite_others">Invite Others</string>
    <string name="detail">Details</string>
    <string name="close">Close</string>
    <string name="title_activity_my_posts_detail">MyPostsDetailActivity</string>
    <string name="my_posts_detail">My Posts Details</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_post">Edit Post</string>
    <string name="invites">Invites</string>

    <!-- This is for the gender spinner in editProfile -->
    <string-array name="gender_array">
        <item>"--"</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- This is for the post status spinner in editProfile -->
    <string-array name="post_status_array">
        <item><FONT COLOR="#00FF00">OPEN</FONT></item>
        <item>CLOSED</item>
        <item>CANCELLED</item>
    </string-array>

    <string name="title_activity_contact_tabbed">ContactTabbedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_select_friends_fragment">SelectFriendsFragmentActivity</string>
    <string name="title_activity_invites_fragment">InvitesFragmentActivity</string>
    <string name="title_activity_nearby_contacts">NearbyContactsActivity</string>

</resources>