<!-- @author Hai Tang  @author Yueling Loh -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.jhu.cs.oose.fall2014.group19.neverEatAlone.client.gui.activities.PostInformationActivity" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header_postInfo"
        style="@style/HeaderTheme" >

        <TextView
            android:id="@+id/textView_postinformation_title"
            style="@style/HeaderTextTheme"
            android:text="@string/post_information" />
    </RelativeLayout>

    <!-- Main Space -->

    <RelativeLayout
        android:id="@+id/main_postInfo"
        style="@style/MainLayoutTheme"
        android:layout_below="@+id/header_postInfo" >

        <Button
            android:id="@+id/button_postinformation_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_postinformation_title"
            android:onClick="onBackButtonClick"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView_postinformation_posttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_postinformation_back"
            android:layout_marginTop="23dp"
            android:text="@string/post_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_postinformation_startpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_postinformation_posttime"
            android:layout_marginTop="23dp"
            android:text="@string/start_post"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_postinformation_endpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_postinformation_startpost"
            android:layout_marginTop="22dp"
            android:text="@string/end_post"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_postinformation_additionalinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_postinformation_endpost"
            android:layout_marginTop="27dp"
            android:text="@string/additional_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_postinformation_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onPostButtonClick"
            android:text="@string/post" />
    </RelativeLayout>

</RelativeLayout>