<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.jhu.cs.oose.fall2014.group19.neverEatAlone.client.gui.activities.CreateMealInformationActivity" >

    <TextView
        android:id="@+id/CreateMealInformation_text_mealinformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/CreateMealInformation_meal_information"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/CreateMealInformation_text_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CreateMealInformation_text_mealinformation"
        android:text="@string/when"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/CreateMealInformation_layout_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CreateMealInformation_text_when"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CreateMealInformation_text_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_time" />

        <Button
            android:id="@+id/CreateMealInformation_button_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnStartDataButtonClick"
            android:text="@string/SelectDate" />

        <Button
            android:id="@+id/CreateMealInformation_button_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnStartTimeButtonClick"
            android:text="@string/SelectTime" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CreateMealInformation_layout_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CreateMealInformation_layout_start"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CreateMealInformation_text_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_time" />

        <Button
            android:id="@+id/CreateMealInformation_button_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnEndDataButtonClick"
            android:text="@string/SelectDate" />

        <Button
            android:id="@+id/CreateMealInformation_button_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnEndTimeButtonClick"
            android:text="@string/SelectTime" />
    </LinearLayout>

    <TextView
        android:id="@+id/CreateMealInformation_text_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CreateMealInformation_layout_end"
        android:text="@string/where"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/CreateMealInformation_layout_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CreateMealInformation_text_where"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CreateMealInformation_text_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant" />

        <EditText
            android:id="@+id/edit_restaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/CreateMealInformation_text_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CreateMealInformation_layout_where"
        android:text="@string/other_information"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/CreateMealInformation_layout_maxnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CreateMealInformation_text_other"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CreateMealInformation_text_maxnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_number" />

        <EditText
            android:id="@+id/edit_maxnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CreateMealInformation_layout_allowfriendinvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CreateMealInformation_layout_maxnumber"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/CreateMealInformation_text_allowfriendinvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_friend_invite" />

        <EditText
            android:id="@+id/edit_allowfriendinvite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/CreateMealInformation_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CreateMealInformation_layout_allowfriendinvite"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/CreateMealInformation_button_next"
        android:layout_toStartOf="@+id/CreateMealInformation_button_next"
        android:onClick="OnBackButtonClick"
        android:text="@string/back" />

    <Button
        android:id="@+id/CreateMealInformation_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/CreateMealInformation_layout_allowfriendinvite"
        android:layout_marginTop="20dp"
        android:onClick="OnNextButtonClick"
        android:text="@string/next" />

</RelativeLayout>