<!-- 
@author Hai Tang 
@author Yueling Loh 
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.jhu.cs.oose.fall2014.group19.neverEatAlone.client.gui.activities.ProfileActivity" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header_profile"
        style="@style/HeaderTheme" >

        <TextView
            android:id="@+id/profile"
            style="@style/HeaderTextTheme"
            android:text="@string/profile" />
    </RelativeLayout>

    <!-- Button Header -->

    <RelativeLayout
        android:id="@+id/buttons_profile"
        style="@style/ButtonBarTheme"
        android:layout_below="@+id/header_profile" >

        <Button
            android:id="@+id/button_profile_changepassword"
            style="@style/BarButton"
            android:layout_alignParentLeft="true"
            android:onClick="onChangepasswordButtonClick"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/button_profile_edit"
            style="@style/BarButton"
            android:layout_alignParentRight="true"
            android:onClick="onEditButtonClick"
            android:text="@string/edit" />
    </RelativeLayout>

    <!-- Main Space -->

    <RelativeLayout
        android:id="@+id/main_profile"
        style="@style/MainLayoutTheme"
        android:layout_below="@+id/buttons_profile" >

        <ImageView
            android:id="@+id/imageView_profile_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profile_username"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/user_profile" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView_profile_avatar"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profile_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile_username"
            android:layout_marginTop="20dp"
            android:text="@string/alias"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_alias"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profile_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_email"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profile_workspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_gender"
            android:layout_marginTop="20dp"
            android:text="@string/workspace"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profile_username"
            android:layout_alignBottom="@+id/profile_username"
            android:layout_centerHorizontal="true"
            android:text="hpotter1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profile_alias"
            android:layout_alignBottom="@+id/profile_alias"
            android:layout_centerHorizontal="true"
            android:text="HP"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profile_name"
            android:layout_alignBottom="@+id/profile_name"
            android:layout_centerHorizontal="true"
            android:text="Harry Potter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profile_email"
            android:layout_alignBottom="@+id/profile_email"
            android:layout_centerHorizontal="true"
            android:text="harry@jhu.edu"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profile_gender"
            android:layout_alignBottom="@+id/profile_gender"
            android:layout_centerHorizontal="true"
            android:text="Harry Potter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_workspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profile_workspace"
            android:layout_alignBottom="@+id/profile_workspace"
            android:layout_centerHorizontal="true"
            android:text="Hogworts"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_profile_logout"
            style="@style/StandardButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onLogoutButtonClick"
            android:text="@string/logout" />

        <Button
            android:id="@+id/button_delete_account"
            style="@style/StandardButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="onDeleteAccountButtonClick"
            android:text="@string/delete_account" />
    </RelativeLayout>

</RelativeLayout>