<!-- @author Yueling Loh -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.jhu.cs.oose.fall2014.group19.neverEatAlone.client.gui.activities.DisplayMessageActivity" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header_displayMessage"
        style="@style/HeaderTheme" >

        <TextView
            android:id="@+id/register_information"
            style="@style/HeaderTextTheme"
            android:text="@string/register_information" />
    </RelativeLayout>

    <!-- Main Space -->

    <RelativeLayout
        android:id="@+id/main_displayMessage"
        style="@style/MainLayoutTheme"
        android:layout_below="@+id/header_displayMessage" >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/register_information"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/username_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/username"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_username"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_email"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_confirm_password"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/button_register_cancel"
            android:layout_toStartOf="@+id/button_register_register"
            android:onClick="registerRegister"
            android:text="@string/register" />

        <Button
            android:id="@+id/button_register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edit_confirm_password"
            android:layout_marginTop="20dp"
            android:onClick="registerCancel"
            android:text="@string/cancel" />
    </RelativeLayout>

</RelativeLayout>